# DS-Flight-Delay-Classification

./: .env.example  .gitignore  Design.md  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml  run.sh
.github/workflows/: ci.yml
configs/: project.yaml
docs/: phase1_proposal_report.md
flight_delay_classification/: __init__.py  dataset.py  features.py  plots.py
flight_delay_classification/acquisition/: sample.py  weather.py
flight_delay_classification/evaluation/: evaluate.py  model_selection.py
flight_delay_classification/modeling/: predict.py  registry.py  run_all_models.py  train.py  tune.py
flight_delay_classification/preprocessing/: preprocess.py
flight_delay_classification/validation/: validate.py
notebooks/: best_run_error_analysis.ipynb  eda.ipynb  validation_report.ipynb
reports/: main_report.tex
src/acquisition/: sample.py  weather.py
src/preprocessing/: preprocess.py
src/validation/: validate.py
tests/: test_data.py  test_preprocessing.py  test_train.py
