[tool.poetry]
name = "flight-delay-classification"
version = "0.1.0"
description = "Supervised multi-class classification of flight delay severity using historical flight data and weather API enrichment."
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
numpy = "^1.26"
requests = "^2.31"
python-dotenv = "^1.0"
timezonefinder = "^6.5"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
ruff = "^0.4"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
